--- a/style/aside/aside-layout.css
+++ b/style/aside/aside-layout.css
@@ -1,11 +1,11 @@
-.aside-container {
+aside {
   display: flex;
   justify-content: center;
   
   margin: 1.25rem;
 
-  max-width: 25rem;
-  height: 45.5rem;
+  max-width: 100%;
+  height: 100%;
 
   background-image: url(../../assets/Background.png);
   background-repeat: no-repeat;
