--- a/style/layout.css
+++ b/style/layout.css
@@ -1,6 +1,6 @@
 #app {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr 2fr;
 
   height: 100vh;
   overflow: hidden;
