--- a/style/aside/aside-header.css
+++ b/style/aside/aside-header.css
@@ -1,27 +1,31 @@
-header {
-  width: 100%;
-  height: 9rem;
-  margin: 2rem 2rem auto;
-}
+aside {
+  & header {
+    width: 100%;
+    height: 9rem;
+    margin: 2rem 2rem auto;
+  }
 
-img {
-  width: 2.8rem;
-  height: 3rem;
-}
+  & img {
+    width: 2.8rem;
+    height: 3rem;
+  }
 
-h1 {
-  font-family: var(--font-leckerli);
-  color: var(--color-pink);
-  font-size: 2.5rem;
+  & .text {
+    margin-top: 1rem;
+  }
 
-  margin-top: 1rem;
-}
+  & h1 {
+    font-family: var(--font-leckerli);
+    color: var(--color-pink);
+    font-size: 2.5rem;
+  }
 
-p {
-  font-family: var(--font-open-sans);
-  color: var(--color-text-heading);
-  font-size: 1rem;
+  & p {
+    font-family: var(--font-open-sans);
+    color: var(--color-text-heading);
+    font-size: 1rem;
 
-  margin-top: .25rem;
-  font-weight: 100;
+    margin-top: 0.25rem;
+    font-weight: 100;
+  }
 }
