--- a/style/aside/aside-layout.css
+++ b/style/aside/aside-layout.css
@@ -2,7 +2,7 @@ aside {
   display: flex;
   justify-content: center;
   
-  margin: 1.25rem;
+  margin: 1.25rem 0 1.25rem 1.25rem;
 
   max-width: 100%;
   height: 100%;
