--- a/style/main/main-index.css
+++ b/style/main/main-index.css
@@ -1,7 +1,25 @@
 @import url(main-form.css);
 @import url(main-layout.css);
 
-h1 {
-  font: var();
+main h1 {
+  font: bold 1.75rem var(--font-baloo-2);
+  color: var(--color-text-heading);
 
+  margin-bottom: 2.5rem;
+}
+
+.head-form {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5rem;
+
+  & img {
+    opacity: 0.4;
+  }
+
+  & legend {
+    margin-left: 0.75rem;
+    color: var(--color-text-heading);
+    font: bold 1.12rem var(--font-baloo-2);
+  }
 }
