--- a/style/main/main-form.css
+++ b/style/main/main-form.css
@@ -71,7 +71,6 @@
   background-image: url(../../components/video-off.png);
 }
 
-
 .description {
   margin-top: 1rem;
 
@@ -80,3 +79,184 @@
     padding-bottom: 6rem;
   }
 }
+
+/* Personalização */
+
+.customization .head-form {
+  margin-top: 3rem;
+}
+
+.color-range {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.color-range .wrapper {
+  width: 40px;
+  height: 40px;
+  background-color: var(--color-input-stroke);
+  border-radius: 999px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.wrapper:hover {
+  border: solid 2px var(--color-brand-light);
+}
+
+.color-range input {
+  width: 40px;
+  height: 40px;
+  margin: 0;
+
+  position: absolute;
+  opacity: 0;
+}
+
+.color {
+  width: 1.75rem;
+  height: 1.75rem;
+  border-radius: 999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.event-theme {
+  margin-top: 1.75rem;
+  width: 35rem;
+  height: 22.5rem;
+}
+
+.wrapper-theme {
+  margin-top: 1rem;
+  width: 35rem;
+  height: 20.3rem;
+
+  grid-template-columns: repeat(auto-fit, minmax(134px, 1fr));
+  gap: 8px;
+}
+
+.wrapper-theme .wrapper {
+  width: 134px;
+  height: 103px;
+
+  background-color: var(--color-shape-button);
+  border-radius: 8px;
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrapper-theme .wrapper img {
+  max-width: 126px;
+  height: 64px;
+}
+
+.wrapper-theme .wrapper label {
+  margin-top: 8px;
+
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper-theme .wrapper input {
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+}
+
+.style-and-cover-photo {
+  grid-template-columns: 35% 65%;
+  margin-top: 28px;
+}
+
+.style label {
+  display: block;
+  margin-bottom: 12px;
+}
+
+.style-light-dark {
+  max-width: 176px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  color: var(--color-text-heading);
+  font: 14px var(--font-open-sans);
+  font-weight: 300;
+}
+
+.style-light-dark .style-image {
+  background-image: url(../../components/button-off.png);
+  background-repeat: none;
+  width: 64px;
+  height: 32px;
+}
+
+.style-light-dark .style-text {
+  font: 14px var(--font-open-sans);
+  font-weight: 200;
+  color: var(--color-text-heading);
+}
+
+.wrapper-cover-photo {
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+  width: 368px;
+  height: 48px;
+  position: relative;
+}
+
+.wrapper-cover-photo input {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+}
+
+.wrapper-cover-photo .button-upload {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  width: 119px;
+  height: 40px;
+  border-radius: 8px;
+  position: absolute;
+
+  font: 14px var(--font-open-sans);
+  color: var(--color-text-heading);
+
+  background-color: var(--color-shape-button);
+
+  & img {
+    width: 16px;
+    height: 16px;
+  }
+}
+
+/* Contact info */
+
+fieldset .contact-info {
+  width: 560px;
+  height: 246px;
+}
+
+/* .wrapper-email-contact {
+  margin-top: 16px;
+  grid-template-columns: 50% 50%;
+  gap: 16px;
+} */
