--- a/style/main/main-form.css
+++ b/style/main/main-form.css
@@ -255,8 +255,93 @@ fieldset .contact-info {
   height: 246px;
 }
 
-/* .wrapper-email-contact {
+.contact-info .head-form {
+  margin-top: 48px;
+}
+
+.wrapper-email-contact {
   margin-top: 16px;
   grid-template-columns: 50% 50%;
   gap: 16px;
-} */
+}
+
+/* Terms */
+
+.terms {
+  position: relative;
+  width: 100%;
+  height: 228px;
+  margin-top: 48px;
+  border-top: 1px solid var(--color-input-stroke);
+}
+
+.wrapper-terms {
+  margin-top: 40px;
+  height: 28px;
+  gap: 8px;
+}
+
+.term {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  position: relative;
+}
+
+.term label {
+  font: 100 14px var(--font-open-sans);
+  color: var(--color-text-body);
+}
+
+.term label a {
+  text-decoration: underline;
+  color: var(--color-brand-light);
+  font: 400 14px var(--font-open-sans);
+}
+
+.term .image-checkbox {
+  background-image: url(../../components/checkbox-01.png);
+  width: 20px;
+  height: 20px;
+}
+
+.term input {
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  margin: 0;
+  opacity: 0;
+  position: absolute;
+}
+
+.terms button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+
+  margin-top: 20px;
+  margin-left: auto;
+
+  right: 0;
+  bottom: 0;
+
+  gap: 12px;
+  width: 177px;
+  height: 48px;
+
+  border-radius: 8px;
+  background-color: var(--color-brand-dark);
+
+  border: none;
+
+  font: 400 16px var(--font-open-sans);
+  color: var(--color-text-heading);
+}
+
+.terms button img {
+  width: 20px;
+  height: 20px;
+}
+
