--- a/style/main/main-layout.css
+++ b/style/main/main-layout.css
@@ -1,10 +1,16 @@
 main {
+width: 820px;
+height: 100%;
   display: flex;
   justify-content: center;
 }
 
+form {
+  width: 560px;
+}
+
 .main-container {
-  width: 100%;
+  max-width: 820px;
   height: auto;
   padding: 5rem 8.10rem;
   overflow: auto;
@@ -13,10 +19,6 @@ main {
 
   margin: 1.25rem 1.25rem 1.25rem 0;
   border-radius: 0.75rem;
-
-  & .main-container {
-    margin: 5rem 8.25rem ;
-  }
 }
 
 label {
