--- a/style/layout.css
+++ b/style/layout.css
@@ -1,10 +1,16 @@
 #app {
   display: grid;
   grid-template-columns: 1fr 2fr;
+  justify-content: center;
 
   height: 100vh;
   overflow: hidden;
   gap: 1.25rem;
+}
+
+body {
+  display: flex;
+  justify-content: center;
 }
 
 main {
